<resources>
    <string name="app_name">PrawaJazdy</string>
    <string name="register_to_prawa_jazdy_app">Rejestracja Prawa Jazdy App</string>
    <string name="login_to_prawa_jazdy_app">Wejście Prawa Jazdy App</string>
    <string name="create_new_account">Utwórz nowe konto</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="login_to_the_app">Zaloguj się</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="register">Zarejestruj</string>
    <string name="login">Wejdż</string>
    <string name="do_not_have_an_account">Nie masz jeszcze konta?</string>
    <string name="already_has_an_account">Już masz konto?</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="logout">Wyloguj</string>
    <string name="dashboard">Dashboard</string>
    <string name="egzamin">Egzamin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">Pytania</string>
    <string name="wynik">WYNIK</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="wr_do_menu">Wróć do menu</string>
    <string name="zachowaj">Zachowaj</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="ilo_powt_rze">Ilość powtórzeń</string>
    <string name="ilo_powt_rze_po_niepoprawnej_odpowiedzi">Ilość powtórzeń po niepoprawnej odpowiedzi</string>
    <string name="ilo_pyta_w_tescie">Ilość pytań w tescie</string>
    <string name="_50">50</string>
    <string name="nie_zda_e_spr_buj_jeszcze_raz">Nie zdałeś! Spróbuj jeszcze raz!</string>
    <string name="wyszukaj_pytanie">Wyszukaj pytanie</string>
    <string name="wyszukaj">Wyszukaj</string>
    <string name="pytanie">Pytanie</string>
    <string name="testy">Testy</string>
    <string name="cofnij">Cofnij</string>
    <string name="empty_email_error">Email is required!</string>
</resources>