<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:backgroundTint="#ffffff"
        android:onClick="egzamin"
        android:text="@string/egzamin"
        android:textColor="@color/black"
        app:icon="@drawable/ic_circle"
        app:iconGravity="start"
        app:iconTintMode="multiply" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:backgroundTint="#f1f9ff"
        android:onClick="question"
        android:text="@string/testy"
        android:textColor="@color/black"
        app:icon="@drawable/ic_sixangle"
        app:iconGravity="start"
        app:iconTintMode="multiply" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#bce0fd"
        android:onClick="testy"
        android:text="@string/question"
        android:textColor="@color/black"
        app:icon="@drawable/ic_square"
        app:iconTintMode="multiply" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#7fc4fb"
        android:onClick="settings"
        android:text="@string/ustawienia"
        android:textColor="@color/black"
        app:icon="@drawable/ic_romb"
        app:iconTintMode="multiply" />

</LinearLayout>